prusti-tests/tests/parse/ui/foreign_mods.stderr
error[E0308]: mismatched types
  --> $DIR/foreign_mods.rs:13:26
   |
13 |     #[ensures(a >= b ==> result = a)]
   |               ------     ^^^^^^ expected `bool`, found `i32`
   |               |
   |               expected because this is `bool`

error[E0308]: mismatched types
  --> $DIR/foreign_mods.rs:13:15
   |
13 |     #[ensures(a >= b ==> result = a)]
   |               ^^^^^^^^^^^^^^^^^^^^^ expected `bool`, found `()`
   |
help: you might have meant to compare for equality
   |
13 |     #[ensures(a >= b ==> result == a)]
   |                                  +

error[E0308]: mismatched types
  --> $DIR/foreign_mods.rs:20:26
   |
20 |     #[ensures(a >= 0 ==> result = a)]
   |               ------     ^^^^^^ expected `bool`, found `i32`
   |               |
   |               expected because this is `bool`

error[E0308]: mismatched types
  --> $DIR/foreign_mods.rs:20:15
   |
20 |     #[ensures(a >= 0 ==> result = a)]
   |               ^^^^^^^^^^^^^^^^^^^^^ expected `bool`, found `()`
   |
help: you might have meant to compare for equality
   |
20 |     #[ensures(a >= 0 ==> result == a)]
   |                                  +

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0308`.
